--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/jost": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.x",
+    "@react-navigation/stack": "^5.x",
     "expo": "~48.0.6",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
