--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
