--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
-    "lottie-react-native": "5.1.4",
+    "lottie-react-native": "^5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-gesture-handler": "~2.9.0",
