--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "i18next": "^22.4.14",
+    "intl-pluralrules": "^2.0.0",
     "lottie-react-native": "^5.1.4",
     "react": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-native": "0.71.4",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-iphone-x-helper": "^1.3.1",
